--- a/css/app.css
+++ b/css/app.css
@@ -14,7 +14,7 @@ html, body {
 }
 
 body {
-  background-image: url("https://i.ibb.co/MH24chQ/image.png");
+  background-image: url("https://imagehost9.online-image-editor.com/oie_upload/images/262130RqCaP9Z2yE/6NCTg7hvSAYC.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
